--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2408,8 +2408,8 @@ button,
     -ms-flex-shrink: 0;
     flex-shrink: 0;
     display: block;
-    margin: 0 0 2em 4em;
-    width: 35%; }
+    margin: 7em 0 2em 4em;
+    width: 40%; }
     #banner .image img {
       height: 100%;
       -moz-object-fit: cover;
